Updating build tooling across the board

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 <Project>
     <PropertyGroup>
-        <!-- The NuGet version of Statiq.Web and Statiq.Framework (for the CodeAnalysis extension) that should be referenced, or empty to use local references -->
+        <!-- The NuGet versions that should be referenced, or empty to use local references -->
+        <StatiqDocsVersion></StatiqDocsVersion>
         <StatiqWebVersion></StatiqWebVersion>
         <StatiqFrameworkVersion></StatiqFrameworkVersion>
     </PropertyGroup>
