--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
     <PropertyGroup>
-        <!-- The NuGet versions that should be referenced, or empty to use local references -->
-        <StatiqDocsVersion></StatiqDocsVersion>
-        <StatiqWebVersion></StatiqWebVersion>
-        <StatiqFrameworkVersion></StatiqFrameworkVersion>
+        <!-- The NuGet versions that should be referenced, or "local" to use local references -->
+        <StatiqDocsVersion>local</StatiqDocsVersion>
+        <StatiqWebVersion>local</StatiqWebVersion>
+        <StatiqFrameworkVersion>local</StatiqFrameworkVersion>
     </PropertyGroup>
 </Project>
